--- a/css/main.css
+++ b/css/main.css
@@ -19,12 +19,12 @@ body {
 	float:left;
 }
 
-.ryu-ready, .ryu-still, .ryu-throwing {
+.ryu-ready, .ryu-still, .ryu-throwing, .ryu-cool {
   width: 659px;
   height: 494px;
 }
 
-.ryu-ready, .ryu-throwing {
+.ryu-ready, .ryu-throwing, .ryu-cool {
   display: none;
 } 
 
@@ -40,7 +40,11 @@ body {
   background-image: url('../images/ryu-throwing-hadouken.png');
 }
 
-.hadouken, .ryu-ready, .ryu-still, .ryu-throwing {
+.ryu-cool {
+  background-image: url('../images/ryu-cool.gif');
+}
+
+.hadouken, .ryu-ready, .ryu-still, .ryu-throwing, .ryu-cool {
   background-repeat: no-repeat;
 }
 
@@ -53,4 +57,15 @@ body {
   top: 167px;
   left: -212px;
   float: left;
+}
+
+.description {
+	position:absolute;
+	font-family:Tahoma;
+	font-size:25px;
+	font-weight:bold;
+	float:right;
+	width:600px;
+	margin-left:600px;
+	margin-top:300px;
 }
